cabal-version:      2.4
name:               Advent-Of-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hendrik Bertram
maintainer:         bertram.hendrik@fh-swf.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:     Day1, Day2, Day3, Day4, Day5, Day6, Day7, Day8, Day9, Day10, Day11
    hs-source-dirs:      src
    build-depends:       base
                        , containers
                        , text
                        , hgeometry
                        , hgeometry-combinatorial
    default-language:    Haskell2010
    
executable Advent-Of-Haskell
    main-is:          Main.hs
    other-modules:    Day1 Day2 Day3 Day4 Day5 Day6 Day7 Day8 Day9 Day10 Day11
    build-depends:    base
                      , QuickCheck
                      , cmdargs
                      , containers
                      , text
                      , hgeometry
                      , hgeometry-combinatorial
    hs-source-dirs:   app src
    default-language: Haskell2010

test-suite days-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            DaysTest.hs
  build-depends:      base, HUnit, Advent-Of-Haskell
  default-language:   Haskell2010

